Добавлена возможность изменять за кем закреплена отсечка в таблице по номеру участника

--- a/src/main/resources/view/marksmonitor/MarksMonitorCompetition.fxml
+++ b/src/main/resources/view/marksmonitor/MarksMonitorCompetition.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="main_pane" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="610.0" prefWidth="1090.0" style="-fx-background-color: ECF1FE;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.logic.marksmonitorpage.MarksMonitorCompetitionController">
+<AnchorPane fx:id="main_pane" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="610.0" prefWidth="1090.0" style="-fx-background-color: ECF1FE;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.logic.marksmonitorpage.MarksMonitorCompetitionController">
    <children>
       <GridPane alignment="TOP_CENTER" layoutX="13.0" layoutY="2.0" minHeight="-Infinity" prefHeight="610.0" prefWidth="1090.0" AnchorPane.bottomAnchor="-2.0" AnchorPane.leftAnchor="3.0" AnchorPane.rightAnchor="-3.0" AnchorPane.topAnchor="2.0">
         <columnConstraints>
@@ -209,7 +209,7 @@
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <TableView fx:id="participantStartTable" prefHeight="318.0" prefWidth="1064.0" stylesheets="@../../assets/css/table.css">
+                              <TableView fx:id="participantStartTable" editable="true" prefHeight="318.0" prefWidth="1064.0" stylesheets="@../../assets/css/table.css">
                                  <columns>
                                     <TableColumn fx:id="psNumberColumn" maxWidth="25.0" minWidth="25.0" prefWidth="25.0" resizable="false" text="№" />
                                     <TableColumn fx:id="psCurrentTimeColumn" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" resizable="false" text="Время текущее" />
@@ -225,7 +225,7 @@
                                     <TableColumn fx:id="psLapTimeColumn" prefWidth="110.0" resizable="false" text="Время круга" />
                                  </columns>
                               </TableView>
-                              <TableView fx:id="participantCompetitionTable" prefHeight="318.0" prefWidth="1064.0" stylesheets="@../../assets/css/table.css">
+                              <TableView fx:id="participantCompetitionTable" editable="true" prefHeight="318.0" prefWidth="1064.0" stylesheets="@../../assets/css/table.css">
                                  <columns>
                                     <TableColumn fx:id="pcNumberColumn" prefWidth="39.20001173019409" resizable="false" text="№" />
                                     <TableColumn fx:id="pcLastnameColumn" prefWidth="77.59994125366211" resizable="false" text="Фамилия" />
