--- a/src/main/resources/view/competition/CompetitionPage.fxml
+++ b/src/main/resources/view/competition/CompetitionPage.fxml
@@ -57,7 +57,7 @@
                         <String fx:value="btn-success" />
                      </styleClass>
                   </Button>
-                  <Button fx:id="competitionButton" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#delete" stylesheets="@../../assets/css/Buttons.css" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3" GridPane.valignment="BOTTOM">
+                  <Button fx:id="competitionButton" contentDisplay="CENTER" disable="true" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#delete" stylesheets="@../../assets/css/Buttons.css" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3" GridPane.valignment="BOTTOM">
                      <graphic>
                         <ImageView fitHeight="12.0" fitWidth="12.0" pickOnBounds="true" preserveRatio="true">
                            <image>
