--- a/src/main/resources/view/marksmonitor/CreateOrEditParticipantPopup.fxml
+++ b/src/main/resources/view/marksmonitor/CreateOrEditParticipantPopup.fxml
@@ -94,7 +94,7 @@
                               <Font size="16.0" />
                            </font>
                         </Label>
-                        <DatePicker fx:id="birthdateDatePicker" editable="false" maxWidth="-Infinity" prefHeight="31.0" prefWidth="160.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                        <DatePicker fx:id="birthdateDatePicker" editable="false" maxWidth="-Infinity" prefHeight="31.0" prefWidth="160.0" stylesheets="@../../assets/css/DatePicker.css" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                         <Label text="Город" GridPane.columnIndex="2" GridPane.rowIndex="2">
                            <font>
                               <Font size="16.0" />
@@ -139,10 +139,10 @@
                               <Font size="16.0" />
                            </font>
                         </Label>
-                        <ChoiceBox fx:id="distanceChoiceBox" prefWidth="150.0" GridPane.rowIndex="9" />
+                        <ChoiceBox fx:id="distanceChoiceBox" prefWidth="150.0" stylesheets="@../../assets/css/ChoiseBox.css" GridPane.rowIndex="9" />
                      </children>
                   </GridPane>
-                  <TableView fx:id="sportsmenTableView" prefHeight="116.0" prefWidth="516.0" GridPane.columnIndex="1">
+                  <TableView fx:id="sportsmenTableView" prefHeight="116.0" prefWidth="516.0" stylesheets="@../../assets/css/table.css" GridPane.columnIndex="1">
                     <columns>
                       <TableColumn fx:id="surnameColumn" prefWidth="118.0" text="Фамилия" />
                       <TableColumn fx:id="nameColumn" prefWidth="117.60003662109375" text="Имя" />
